# NovelAgentTeams

./: .gitignore  README.md
First/: 大纲  (+1 more)
novels_project/: .coverage  .gitignore  .graph_sync_state.json  CHARACTER_MANAGEMENT_GUIDE.md  CURRENT_STATUS_SUMMARY.md  DEBUGGING_SUMMARY.md  DEPLOYMENT_COMPLETE.md  FINAL_SUMMARY.md  HYBRID_CHARACTER_SYSTEM.md  MODEL_CONFIG.md  MVP_QUICKSTART.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  RATE_LIMIT_SOLUTION.md  README.md  SETUP_SUMMARY.md  extract_chapters.py  init_vectordb.py  novels.yaml  pyproject.toml  run.py  test.sh  test_model_config.py  test_openrouter_integration.py
novels_project/.github/workflows/: ci.yml  nightly.yml
novels_project/DESIGN/: AGENTS_DEFINITION.md  BRAINSTORM_SUMMARY.md  DATA_STRUCTURES.md  VALIDATION_CHECKLIST.md  WORKFLOW.md
novels_project/DESIGN/FIX/: fix_issues_0308.yaml  fix_issues_template.yaml
novels_project/DESIGN/GUIDES/: memory_observability_and_test_infra.md  如何修正已生成章节并防止错误复现.md  如何调整剧情与埋设暗线.md
novels_project/DESIGN/PROMPTS/: character_designer_prompt.md  chief_editor_prompt.md  plot_writer_prompt.md  proofreader_prompt.md
novels_project/config/: agent_config.yaml  model_providers.yaml  system_settings.yaml
novels_project/deliverables/: frontend-layout-review-2026-06-05.md  qa-test-plan.md
novels_project/docs/: ITERATION_PLAN_v2.md  README.md  SYSTEM_TEST_PLAN.md  TEST_PLAN_OPENROUTER.md  character_cards.md  env_and_model.md  outline_and_samples.md  prompt.md  qa-test-plan-architecture-optimization.md
novels_project/feedback/: proofreading_feedback.yaml
novels_project/frontend/: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
novels_project/frontend/src/: App.tsx  index.css  main.tsx  test-setup.ts
novels_project/graph/: knowledge_graph.json
novels_project/output/chapter_summaries/: chapter_11_summary.yaml  chapter_16_summary.yaml  chapter_1_summary.yaml
novels_project/output/chapters/: chapter_10_final.md  chapter_13_final.md  chapter_16_final.md  chapter_1_final.md  chapter_2_final.md  chapter_5_final.md
novels_project/output/raw_outputs/: chapter_11_raw.yaml  chapter_15_raw.yaml  chapter_1_raw.yaml
novels_project/samples/权谋章/: opening_scene.md
novels_project/scripts/: continue_writing.py  continuous_writing.py  fix_chapter.py
novels_project/src/novels_project/: __init__.py  agents.py  api_client.py  cli.py  compaction.py  context_injector.py  crew.py  feedback_loop.py  initialize.py  iteration_controller.py  iterative_writer.py  logger.py  main.py  project_config.py  retrieval_engine.py  retry_handler.py  runtime.py  server.py  session.py  session_store.py  system_prompt.py  tool_executor.py  tool_spec.py  usage.py
novels_project/tests/: test_chapter_fix_tools.py  test_character_card_tool.py  test_cli_integration.py  test_code_review_fixes.py  test_comprehensive_integration.py  test_graph_memory.py  test_p0_arch_fixes.py  test_system.py
novels_project/tests/data/: test_characters.yaml
novels_project/tests/integration/: conftest.py  test_api_integration.py  test_cli_memory_wiring.py  test_context_injector_summary.py  test_runtime_compression.py  test_runtime_compression_basic.py  test_runtime_context_injection.py  test_sync_manager.py
novels_project/tests/performance/: locustfile.py
novels_project/tests/reports/: ISSUE_001_ROOT_CAUSE_ANALYSIS.md  TEST_REPORT_DETAILED.md  test_summary.md
novels_project/tests/security/: test_security.py
novels_project/tests/unit/: test_agents.py  test_api_client.py  test_api_modules.py  test_chapter_fix_tools.py  test_chapter_title.py  test_character_card_tools.py  test_character_voice_checker.py  test_compaction.py  test_content.py  test_context_injector.py  test_entity_extractor.py  test_feedback_loop.py  test_feedback_tools.py  test_graph_memory_tool.py  test_graph_query.py  test_initialize.py  test_integrator.py  test_iteration_controller.py  test_iteration_tools.py  test_iterative_writer.py  test_logger.py  test_main_agent_concurrency.py  (+12 more)
(+132 files in other folders)
