[project]
name = "novels_project"
version = "0.1.0"
description = "novels_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
novels_project = "novels_project.main:run"
run_crew = "novels_project.main:run"
train = "novels_project.main:train"
replay = "novels_project.main:replay"
test = "novels_project.main:test"
run_with_trigger = "novels_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
