[project]
name = "novels_project"
version = "0.2.0"
description = "AI-powered novel writing system with custom agent runtime"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "chromadb>=0.4.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "networkx>=3.0",
]

[project.scripts]
novels = "novels_project.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
