[project]
name = "novels_project"
version = "0.2.0"
description = "AI-powered novel writing system with custom agent runtime"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "chromadb>=0.4.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "networkx>=3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
novels = "novels_project.cli:main"
novels-server = "novels_project.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.0",
    "pytest-mock>=3.10",
    "pytest-benchmark>=4.0",
    "httpx>=0.24",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "safety>=2.3",
    "locust>=2.15",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/novels_project"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "src/novels_project/server.py",
    "src/novels_project/cli.py",
    "src/novels_project/__init__.py",
]
relative_files = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
    "pass",
    "return None",
    "raise .*",
]
show_missing = true
skip_covered = false
skip_empty = false
fail_under = 50

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.coverage.paths]
source = [
    "src/",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.bandit]
targets = ["src/"]
exclude = ["tests/"]
skips = ["B101"]  # assert statements
